--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <header>
         <h1>Welcome to My GitHub Page</h1>
-        <p>Your Name | Aspiring Data Scientist</p>
+        <p>Syed Najam-us-Saqib Hamadani | Aspiring Data Scientist</p>
     </header>
     <nav>
         <a href="#about">About Me</a>
@@ -58,7 +58,7 @@
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: your.email@example.com</p>
+        <p>Email: najamhamadani@gmail.com</p>
     </section>
     <footer>
         <p>© 2024 Your Name. All Rights Reserved.</p>
